update new theme

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="articles-content">
                             <h1><a href="post.html" title="">
-                                Mã giảm giá Shopee ngày 2/5</a></h1>
+                                Mã giảm giá Shopee ngày 3/5</a></h1>
                             <p>
                                 Tôi sẽ liên tục cập nhật mã giảm giá và các giảm phẩm sale hàng ngày của Shopee tại đây.
                                 <br>
@@ -164,7 +164,7 @@
                                 </li>
                                 <li><a title="" href="#" class="light-link"><i class="pe-7s-like"></i> 1221</a></li>
                             </ul> -->
-                            <a title="" class="btn" href="#">Xem mã giảm giá</a>
+                            <a title="" class="btn" href="#">Chưa cập nhật mã</a>
                         </div>
                     </article>
 
