--- a/post.html
+++ b/post.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Cùng nhau săn sale" />
     <title>Mã giảm giá Shopee</title>
-
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <!-- EXTERNAL CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/Pe-icon-7-stroke.css">
@@ -76,7 +76,7 @@
                             <span class="articles-header-category"><a class="green" title="">Vừa mới cập nhật</a></span>
                         </div>
                         <div class="articles-content">
-                            <h1 class="articles-content-blog-post-title"><a href="post.html" title="Mã giảm giá Shopee ngày 2/5">Mã giảm giá Shopee ngày 2/5</a></h1>
+                            <h1 class="articles-content-blog-post-title"><a href="post.html" title="Mã giảm giá Shopee ngày 2/5">Mã giảm giá Shopee ngày 3/5</a></h1>
                             <!-- <p>Now that we have our view and component layer, we need something to manage state and the lifecycle of our application. Redux is
                                 also a clear winner here.
                             </p>
@@ -86,7 +86,8 @@
                                 Lux, Nuclear, Fluxxor and many, many more. One Flux-like implementation eventually caught the community’s attention, and for
                                 good reasons: Redux.</p> -->
                             <blockquote class="secondary-quote">
-                                <strong>Click </strong> vào link để có thể mở ứng dụng lên nhanh hơn và áp dụng mã giảm giá thuận tiện hơn. Cũng là 1 cách để ủng hộ BOT đấy các bạn 💙
+                                <a>Đầu tiên Copy mã ở dưới.</a> <br>
+                                <strong>Click </strong> vào lấy mã để có thể mở ứng dụng lên nhanh hơn và áp dụng mã giảm giá thuận tiện hơn. Cũng là 1 cách để ủng hộ BOT đấy các bạn 💙
                             </blockquote>
 
                             <div class="articles-content-block">
@@ -97,49 +98,52 @@
                                 <iframe class="vimeo-movie" src="https://player.vimeo.com/video/102553634" width="640" height="360" frameborder="0"
                                         webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
                                 <h3 class="list-title">Chi tiết các mã giảm giá:</h3>
-                                <h3><li>🌟Công nghệ Mall</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/ZShzEsFb" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                <h3><li>🌟Mã toàn sàn Shopee</li></h3>
+                                <code class="language-js">
+TRUST1NU hoàn 10k đơn từ 50k</code>
+                                <h3><li>🌟Nhà cửa đời sống</li></h3>
+                                <a style="color: red;" href="https://shorten.asia/y5TYck5Y" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
-                                   <p>ELMALMT giảm 6% tối đa 300k đơn từ 699k</p> 
-                                   <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
+                                   <p>HLXU0305 hoàn 20k</p> 
+                                   <!-- <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
                                    <p>ELMAL7 giảm 7% tối đa 300k đơn từ 6m</p>
-                                   <p>ELMALL5 giảm 5% tối đa 500k đơn từ 399k</p>
+                                   <p>ELMALL5 giảm 5% tối đa 500k đơn từ 399k</p> -->
                                    <code class="language-js">
-Lưu voucher 500k</code> <br>
-<code class="language-js">
-Săn deal HOT lúc 0h - 12h          </code>
+Lưu mã NCĐS giảm tối đa 100k</code> 
+<!-- <code class="language-js">
+Săn deal HOT lúc 0h - 12h          </code> -->
                                     </ul>
-                                <h3><li>🌟Điện tử Mall</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/a2TttJvK" target="_blank">(Lấy và nhập mã tại đây)</a>   
+                                <h3><li>🌟Hàng quốc tế</li></h3>
+                                <a style="color: red;" href="https://shorten.asia/dTZbj3TD" target="_blank">(Lấy và nhập mã tại đây)</a>   
                                     <ul>
-                                    <p>ELMALLN5 giảm 10% tối đa 300k đơn từ 300k</p> 
-                                    <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p>
-                                    <code class="language-js">
-Ưu đãi từ các thương hiệu chính hãng.</code>
+                                    <p>CBSD3 giảm 10k</p> 
+                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
+                                    <!-- <code class="language-js">
+Ưu đãi từ các thương hiệu chính hãng.</code> -->
                                  </ul>
-                                 <h3><li>🌟Thời trang nam</li></h3>
-                                 <a style="color: red;" href="https://shorten.asia/DKJRp1kg" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                 <h3><li>🌟Công nghệ</li></h3>
+                                 <a style="color: red;" href="https://shorten.asia/hzDgqCeq" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
                                    <!-- <p>ELMALMT giảm 6% tối đa 300k đơn từ 699k</p> 
                                    <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
                                    <p>ELMAL7 giảm 7% tối đa 300k đơn từ 6m</p>
                                    <p>ELMALL5 giảm 5% tối đa 500k đơn từ 399k</p> -->
                                    <code class="language-js">
-Săn voucher các khung giờ.</code> <br>
-<code class="language-js">
+Voucher ưu đãi từ các ngành hàng công nghệ.</code> 
+<!-- <code class="language-js">
 13h: MAHUN... giảm 100K đơn 500k    </code> <br>
 <code class="language-js">
-20h: MAHUN... giảm 150k đơn 1tr  </code>
+20h: MAHUN... giảm 150k đơn 1tr  </code> -->
                                     </ul>
-                                    <h3><li>🌟Văn phòng phẩm</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/KvmgjAdh" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <h3><li>🌟Điện máy</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/Z8TJUnUD" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
-                                    <p>BMVPP05 giảm 10% tối đa 50k đơn từ 99k</p> 
+                                    <!-- <p>BMVPP05 giảm 10% tối đa 50k đơn từ 99k</p>  -->
                                     <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
                                     <code class="language-js">
-Voucher ưu đãi từ thương hiệu giảm tới 50k.</code> <br>
-<code class="language-js">
-Săn deal 1k mở bán 0h.</code>
+Ưu đãi MPVC và lắp đặt cho các sp điện máy.</code> 
+<!-- <code class="language-js">
+Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
 
 
