--- a/post2.html
+++ b/post2.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Cùng nhau săn sale" />
     <title>Mã giảm giá Lazada</title>
-
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <!-- EXTERNAL CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/Pe-icon-7-stroke.css">
