update new theme

--- a/post.html
+++ b/post.html
@@ -76,7 +76,7 @@
                             <span class="articles-header-category"><a class="green" title="">Vừa mới cập nhật</a></span>
                         </div>
                         <div class="articles-content">
-                            <h1 class="articles-content-blog-post-title"><a href="post.html" title="Mã giảm giá Shopee ngày 2/5">Mã giảm giá Shopee ngày 3/5</a></h1>
+                            <h1 class="articles-content-blog-post-title"><a href="post.html" title="Mã giảm giá Shopee ngày 2/5">Mã giảm giá Shopee ngày 4/5</a></h1>
                             <!-- <p>Now that we have our view and component layer, we need something to manage state and the lifecycle of our application. Redux is
                                 also a clear winner here.
                             </p>
@@ -98,55 +98,113 @@
                                 <iframe class="vimeo-movie" src="https://player.vimeo.com/video/102553634" width="640" height="360" frameborder="0"
                                         webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
                                 <h3 class="list-title">Chi tiết các mã giảm giá:</h3>
-                                <h3><li>🌟Mã toàn sàn Shopee</li></h3>
-                                <code class="language-js">
-TRUST1NU hoàn 10k đơn từ 50k</code>
-                                <h3><li>🌟Nhà cửa đời sống</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/y5TYck5Y" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                <h3><li>🌟Deal hot xuân hè</li></h3>
+                                <a style="color: red;" href="https://shorten.asia/werMDTgm" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
-                                   <p>HLXU05 hoàn 20k</p> 
+                                   <p> COSMAY4 giảm 10%, tối đa 60k đơn từ 399k</p> 
                                    <!-- <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
                                    <p>ELMAL7 giảm 7% tối đa 300k đơn từ 6m</p>
                                    <p>ELMALL5 giảm 5% tối đa 500k đơn từ 399k</p> -->
                                    <code class="language-js">
-Lưu mã NCĐS giảm tối đa 100k</code> 
-<!-- <code class="language-js">
-Săn deal HOT lúc 0h - 12h          </code> -->
+Ưu đãi mua deal 0đ.</code> 
+<code class="language-js"> <br>
+Săn deal x99k          </code>
                                     </ul>
-                                <h3><li>🌟Hàng quốc tế</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/dTZbj3TD" target="_blank">(Lấy và nhập mã tại đây)</a>   
+                                <h3><li>🌟Thời Trang - PK nữ</li></h3>
+                                <a style="color: red;" href="https://shorten.asia/vfk7Ym33" target="_blank">(Lấy và nhập mã tại đây)</a>   
                                     <ul>
-                                    <p>CBSD3 giảm 10k</p> 
-                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
-                                    <!-- <code class="language-js">
-Ưu đãi từ các thương hiệu chính hãng.</code> -->
+                                    <p>WADEP hoàn 12% tối đa 30k đơn từ 150k</p> 
+                                    <p>FADEP hoàn 12%, tối đa 30k đơn từ 99k</p>
+                                    <p>WABEAUTY giảm 20%, tối đa 40k đơn từ 50k cho 1 số sp.</p>
+                                    <code class="language-js">
+Săn deal 9k mở bán các khung giờ.</code>
                                  </ul>
-                                 <h3><li>🌟Công nghệ</li></h3>
-                                 <a style="color: red;" href="https://shorten.asia/hzDgqCeq" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                 <h3><li>🌟Mẹ và bé</li></h3>
+                                 <a style="color: red;" href="https://shorten.asia/JGvXQpKP" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
-                                   <!-- <p>ELMALMT giảm 6% tối đa 300k đơn từ 699k</p> 
-                                   <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
+                                   <p>MKBCTHANG5 hoàn 5%, tối đa 40k đơn từ 400k</p> 
+                                   <!-- <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
                                    <p>ELMAL7 giảm 7% tối đa 300k đơn từ 6m</p>
                                    <p>ELMALL5 giảm 5% tối đa 500k đơn từ 399k</p> -->
-                                   <code class="language-js">
-Voucher ưu đãi từ các ngành hàng công nghệ.</code> 
+                                   <!-- <code class="language-js">
+Voucher ưu đãi từ các ngành hàng công nghệ.</code>  -->
 <!-- <code class="language-js">
 13h: MAHUN... giảm 100K đơn 500k    </code> <br>
 <code class="language-js">
 20h: MAHUN... giảm 150k đơn 1tr  </code> -->
                                     </ul>
-                                    <h3><li>🌟Điện máy</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/Z8TJUnUD" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <h3><li>🌟Đồ chơi</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/gpSCaWgm" target="_blank">(Lấy và nhập mã tại đây)</a>
                                     <ul>
-                                    <!-- <p>BMVPP05 giảm 10% tối đa 50k đơn từ 99k</p>  -->
+                                    <p>TOY0405 giảm 15%, tối đa 30k</p>
+                                    <p>TOYMALL5 giảm 15% tối đa 100k đơn từ 99k</p>
                                     <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
-                                    <code class="language-js">
-Ưu đãi MPVC và lắp đặt cho các sp điện máy.</code> 
+                                    <!-- <code class="language-js">
+Ưu đãi MPVC và lắp đặt cho các sp điện máy.</code>  -->
 <!-- <code class="language-js">
 Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
-
-
+                                 <h3><li>🌟Laptop & Máy tính</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/58Rrhfcr" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <ul>
+                                    <p>ELCLMAY giảm 7%, tối đa 300k đơn từ 500k</p> 
+                                    <p>LTECHZONE giảm 7%, tối đa 250k đơn từ 1m</p> 
+                                    <p>ELCL3MIL giảm 5%, tối đa 700k đơn từ 3m</p> 
+                                    <!-- <code class="language-js">
+Ưu đãi MPVC và lắp đặt cho các sp điện máy.</code> 
+<code class="language-js">
+Săn deal 1k mở bán 0h.</code> -->
+                                 </ul>
+                                 <h3><li>🌟Điện thoại</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/YqEfkH3m" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <ul>
+                                    <p>ELMT2M giảm 4%, tối đa 300k đơn từ 2m5</p>
+                                    <p>ELMT7M giảm 5%, tối đa 500k đơn từ 7m</p>
+                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
+                                    <!-- <code class="language-js">
+Ưu đãi MPVC và lắp đặt cho các sp điện máy.</code>  -->
+<!-- <code class="language-js">
+Săn deal 1k mở bán 0h.</code> -->
+                                 </ul>
+                                 <h3><li>🌟Từ Nestle Baby</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/dSr1DE3m" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <ul>
+                                    <p>MKBMNAN05 giảm 8%, tối đa 70k đơn từ 500k</p>
+                                    <p>MKBMNES05 giảm 35k đơn từ 300k</p>
+                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
+                                    <code class="language-js">
+Quà tặng cho các đơn hàng.</code> 
+<!-- <code class="language-js">
+Săn deal 1k mở bán 0h.</code> -->
+                                 </ul>
+                                 <h3><li>🌟Từ Shiseido</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/TJtwWeTr" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <ul>
+                                    <p>COSTBKNEW giảm 10%, tối đa 50k</p>
+                                    <p>COSSK0505 giảm 10%, tối đa 50k đơn từ 239k</p>
+                                    <p>COSAN0505 giảm 10%, tối đa 60k đơn từ 399k</p>
+                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
+                                    <code class="language-js">
+Cơ hội sở hữu 5 máy tạo kiểu tóc Panasonic</code> <br>
+<code class="language-js">
+Ưu đãi mua kèm deal 0đ.</code><br>
+<code class="language-js">
+Săn voucher các khung giờ</code><br>
+    <code class="language-js">
+0h: COSTKBNANG giảm 100k đơn từ 399k</code><br>
+                                 </ul>
+                                 <h3><li>🌟Từ Sagen</li></h3>   
+                                    <a style="color: red;" href="https://shorten.asia/h6tWXhJc" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <ul>
+                                    <p>COSSA45 giảm 10%, tối đa 70k đơn từ 269k</p>
+                                    <!-- <p>MKBMNES05 giảm 35k đơn từ 300k</p> -->
+                                    <!-- <p>ELMALLS5 giảm 12% tối đa 700k đơn từ 3m</p> -->
+                                    <code class="language-js">
+Ưu đãi mua kèm deal 0đ.</code> <br>
+<code class="language-js">
+Săn voucher các khung giờ.</code>
+                                 </ul>
+                                 
 
                             </div>
 
