update new theme

--- a/post.html
+++ b/post.html
@@ -99,7 +99,7 @@
                                         webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
                                 <h3 class="list-title">Chi tiết các mã giảm giá:</h3>
                                 <h3><li>🌟Deal hot xuân hè</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/werMDTgm" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                <a style="color: red;" href="https://shorten.asia/werMDTgm" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                    <p> COSMAY4 giảm 10%, tối đa 60k đơn từ 399k</p> 
                                    <!-- <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
@@ -111,7 +111,7 @@
 Săn deal x99k          </code>
                                     </ul>
                                 <h3><li>🌟Thời Trang - PK nữ</li></h3>
-                                <a style="color: red;" href="https://shorten.asia/vfk7Ym33" target="_blank">(Lấy và nhập mã tại đây)</a>   
+                                <a style="color: red;" href="https://shorten.asia/vfk7Ym33" target="_blank">(Click vào đây để mở app nhập mã)</a>   
                                     <ul>
                                     <p>WADEP hoàn 12% tối đa 30k đơn từ 150k</p> 
                                     <p>FADEP hoàn 12%, tối đa 30k đơn từ 99k</p>
@@ -120,7 +120,7 @@ Săn deal x99k          </code>
 Săn deal 9k mở bán các khung giờ.</code>
                                  </ul>
                                  <h3><li>🌟Mẹ và bé</li></h3>
-                                 <a style="color: red;" href="https://shorten.asia/JGvXQpKP" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                 <a style="color: red;" href="https://shorten.asia/JGvXQpKP" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                    <p>MKBCTHANG5 hoàn 5%, tối đa 40k đơn từ 400k</p> 
                                    <!-- <p>ELMAL6 giảm 6% tối đa 300k đơn từ 699k</p>
@@ -134,7 +134,7 @@ Voucher ưu đãi từ các ngành hàng công nghệ.</code>  -->
 20h: MAHUN... giảm 150k đơn 1tr  </code> -->
                                     </ul>
                                     <h3><li>🌟Đồ chơi</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/gpSCaWgm" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/gpSCaWgm" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>TOY0405 giảm 15%, tối đa 30k</p>
                                     <p>TOYMALL5 giảm 15% tối đa 100k đơn từ 99k</p>
@@ -145,7 +145,7 @@ Voucher ưu đãi từ các ngành hàng công nghệ.</code>  -->
 Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
                                  <h3><li>🌟Laptop & Máy tính</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/58Rrhfcr" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/58Rrhfcr" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>ELCLMAY giảm 7%, tối đa 300k đơn từ 500k</p> 
                                     <p>LTECHZONE giảm 7%, tối đa 250k đơn từ 1m</p> 
@@ -156,7 +156,7 @@ Săn deal 1k mở bán 0h.</code> -->
 Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
                                  <h3><li>🌟Điện thoại</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/YqEfkH3m" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/YqEfkH3m" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>ELMT2M giảm 4%, tối đa 300k đơn từ 2m5</p>
                                     <p>ELMT7M giảm 5%, tối đa 500k đơn từ 7m</p>
@@ -167,7 +167,7 @@ Săn deal 1k mở bán 0h.</code> -->
 Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
                                  <h3><li>🌟Từ Nestle Baby</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/dSr1DE3m" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/dSr1DE3m" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>MKBMNAN05 giảm 8%, tối đa 70k đơn từ 500k</p>
                                     <p>MKBMNES05 giảm 35k đơn từ 300k</p>
@@ -178,7 +178,7 @@ Quà tặng cho các đơn hàng.</code>
 Săn deal 1k mở bán 0h.</code> -->
                                  </ul>
                                  <h3><li>🌟Từ Shiseido</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/TJtwWeTr" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/TJtwWeTr" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>COSTBKNEW giảm 10%, tối đa 50k</p>
                                     <p>COSSK0505 giảm 10%, tối đa 50k đơn từ 239k</p>
@@ -194,7 +194,7 @@ Săn voucher các khung giờ</code><br>
 0h: COSTKBNANG giảm 100k đơn từ 399k</code><br>
                                  </ul>
                                  <h3><li>🌟Từ Sagen</li></h3>   
-                                    <a style="color: red;" href="https://shorten.asia/h6tWXhJc" target="_blank">(Lấy và nhập mã tại đây)</a>
+                                    <a style="color: red;" href="https://shorten.asia/h6tWXhJc" target="_blank">(Click vào đây để mở app nhập mã)</a>
                                     <ul>
                                     <p>COSSA45 giảm 10%, tối đa 70k đơn từ 269k</p>
                                     <!-- <p>MKBMNES05 giảm 35k đơn từ 300k</p> -->
@@ -213,6 +213,7 @@ Săn voucher các khung giờ.</code>
                                 <!-- <pre><code class="language-js">example();</code></pre> -->
                                 <!-- <p>Good luck!</p> -->
                             </div>
+                            <img class="articles-preview-img" src="img/lhquangcao.png" alt="" title="" data-rjs="2">
                         </div>
                     </div>
 
