update new theme

--- a/post.html
+++ b/post.html
@@ -98,6 +98,35 @@
                                 <iframe class="vimeo-movie" src="https://player.vimeo.com/video/102553634" width="640" height="360" frameborder="0"
                                         webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
                                 <h3 class="list-title">Chi tiết các mã giảm giá:</h3>
+                                
+                                <h2>🌟MÃ GIẢM GIÁ 12H🌟</h2>
+                                <h3><li>Ngành Thời Trang</li></h3>
+                                <a style="color: red;" href="https://shorten.asia/EETx2Gkt" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+                                <code class="language-js">
+KIDFLASH hoàn 40%, tối đa 150k đơn từ 350k</code> <br>
+                                    <code class="language-js">
+WTCHFLASH5 giảm 40%, tối đa 150k đơn 350k</code> <br>
+                                        <code class="language-js">
+Săn deal đồng giá x5k</code> <br>
+                                            <code class="language-js">
+FASHION5545 giảm 50%, tối đa 155k đơn 155k</code> 
+<h3><li>Toàn ngành Đời Sống</li></h3>
+<a style="color: red;" href="https://shorten.asia/8XP3fe7Q" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+                                <code class="language-js">
+(Nhà cửa, xe máy, đồ chơi, sách)</code> <br>
+                                    <code class="language-js">
+LIFE0505 giảm 15%, tối đa 150k đơn từ 299k</code> <br>
+<h3><li>Toàn ngành Tiêu Dùng</li></h3>
+<a style="color: red;" href="https://shorten.asia/FpaUDmW5" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+                                <code class="language-js">
+(SKSĐ, Bách Hoá, Mẹ Bé, Giặt Giũ , PET)</code> <br>
+                                    <code class="language-js">
+FMCG100K giảm 100k đơn từ 200k</code> <br>
+<h3><li>Từ Shiseido</li></h3>
+<a style="color: red;" href="https://shorten.asia/TJtwWeTr" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+                                <code class="language-js">
+COSTBKCAP giảm 100k đơn từ 399k</code>
+
                                 <h3>🌟MÃ CHO MỌI ĐƠN SHOPEE🌟</h3>
                                 <li>0505GIAMGIA giảm 10% tối đa 80k đơn từ 400k</li>
                                 <li>0505HOANXU hoàn 12% tối đa 100k Shopee Xu cho đơn từ 500k</li>
