update new theme

--- a/post.html
+++ b/post.html
@@ -126,35 +126,36 @@ FMCG100K giảm 100k đơn từ 200k</code> <br>
 <a style="color: red;" href="https://shorten.asia/TJtwWeTr" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
                                 <code class="language-js">
 COSTBKCAP giảm 100k đơn từ 399k</code> -->
-<h2>🌟MÃ GIẢM GIÁ 17H-18H🌟</h2>
-<h3><li>Deal mẹ bé 9k</li></h3>
-
+<h2>🌟MÃ GIẢM GIÁ 21H-22H🌟</h2>
+<h3><li>Ngành Thời Trang 21H</li></h3>
+<a style="color: red;" href="https://shorten.asia/EETx2Gkt" target="_blank">(Click vào đây để mở app nhập mã)</a>
+<h3>Giày Nam</h3>
 <code class="language-js">
-17h: Tã bỉm Moony: Mã: MKBCMOON</code> <br>
-<a style="color: red;" href="https://shorten.asia/TvAxNSRv" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+MAMSFLASH051 giảm 40%, tối đa 150K đơn từ 350K</code> <br>
+<h3>Thể Thao</h3>
     <code class="language-js">
-17h: Hộp 2 khăn sợi tre cao cấp Mã: MKBCYEU</code> <br>
-<a style="color: red;" href="https://shorten.asia/5VUWxpZs" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+MASOFLASH051 giảm 40%, tối đa 150K đơn từ 350K</code> <br>
     <code class="language-js">
-        <code class="language-js">
-Săn deal đồng giá x5k</code>  
-<h3><li>Toàn ngành Tiêu Dùng</li></h3>
-<a style="color: red;" href="https://shorten.asia/Rb4VSxhe" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
+  
+
+<h3><li>Deal HOT 21H</li></h3>
+<a style="color: red;" href="https://shorten.asia/sc7VE4RN" target="_blank">(Click vào đây để mua sản phẩm)</a>
+<p>Dụng cụ học sinh: BMCOMBO1</p>
+
+ <a style="color: red;" href="https://shorten.asia/d8kUC5MY" target="_blank">(Click vào đây để mua sản phẩm)</a>
+<p>Tã Goon Friend: MKBCGOON</p>
+ 
+ <a style="color: red;" href="https://shorten.asia/bCVhc76Q" target="_blank">(Click vào đây để mua sản phẩm)</a>
+<p>Nước giặt Dnee: MKBCDNEE</p>
+ <br>
+ <h3><li>Toàn ngành Tiêu Dùng 22H</li></h3>
+ 
 <code class="language-js">
 (SKSĐ, Bách Hoá, Mẹ Bé, Giặt Giũ , PET)</code> <br>
-    <code class="language-js">
-18h: FMCG150K giảm 150k đơn từ 300k</code> <br>
-<h3><li>Ngành Thời Trang</li></h3>
-<a style="color: red;" href="https://shorten.asia/EETx2Gkt" target="_blank">(Click vào đây để mở app nhập mã)</a><br>
-<a>Toàn ngành thời trang</a> <br>
-<code class="language-js">
-18h: FASHION5549 giảm 25k đơn từ 0đ</code>
-<a>Thời Trang Nam</a> <br>
-<code class="language-js">
-18h: MAFLASH0518 giảm 40%, tối đa 150k đơn 350k</code>
-<a>Thể Thao - Du Lịch</a> <br>
-<code class="language-js">
-18h: MASOFLASH050 giảm 40%, tối đa 150k đơn 350k</code> <br>
+<a style="color: red;" href="https://shorten.asia/Rb4VSxhe" target="_blank">(Click vào đây để mua sản phẩm)</a>
+    <p>
+FMCG200K giảm 200k đơn từ 500k</p>
+
 
 
                                 <h3>🌟MÃ CHO MỌI ĐƠN SHOPEE🌟</h3>
@@ -349,7 +350,7 @@ Săn deal x99k          </code> -->
 
 
                     <!-- SHARE THIS BLOCK -->
-                    <div class="col-lg-2 col-xs-12">
+                    <!-- <div class="col-lg-2 col-xs-12">
                         <div class="articles-blog-post-share">
                             <h3>Chia sẻ</h3>
                             <div>
@@ -360,7 +361,7 @@ Săn deal x99k          </code> -->
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
