update new theme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/social-icons.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
-
+    <link rel="stylesheet" href="css/test.css">
     <!-- MY CSS -->
     <link rel="stylesheet" href="css/main141f.css?v1.1">
 
@@ -141,6 +141,11 @@
                             <a title="" class="btn" href="post.html">Xem mã giảm giá</a>
 
                         </div>
+
+                        <a>Giảm 200k cho đơn 1tr: <a class="js-emaillink">ĐTTH63NE</a></a>
+
+                        <button class="js-emailcopybtn"><a href="https://shorten.asia/NXYSZZMX" target="_blank">Copy mã</a></button>
+
                     </article>
 
                     <article class="red-article">
@@ -327,7 +332,7 @@
 <script type="text/javascript" src="js/retina.min.js"></script>
 <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/webfont.js"></script>
-
+<script type="text/javascript" src="js/test.js"></script>
 <!-- MY JAVASCRIPT -->
 <script type="text/javascript" src="js/scripts.js"></script>
 
