update new theme

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="articles-content">
                             <h1><a href="post.html" title="">
-                                Mã giảm giá Shopee ngày 6/5</a></h1>
+                                Mã giảm giá Shopee ngày 7/5</a></h1>
                             <p>
                                 Mình sẽ liên tục cập nhật mã giảm giá và các giảm phẩm sale hàng ngày của Shopee tại đây.
                                 <br>
@@ -142,9 +142,9 @@
 
                         </div>
 
-                        <a>Giảm 200k cho đơn 1tr: <a class="js-emaillink">ĐTTH63NE</a></a>
+                        <!-- <a>Giảm 200k cho đơn 1tr: <a class="js-emaillink">ĐTTH63NE</a></a>
 
-                        <button class="js-emailcopybtn"><a href="https://shorten.asia/NXYSZZMX" target="_blank">Copy mã</a></button>
+                        <button class="js-emailcopybtn"><a href="https://shorten.asia/NXYSZZMX" target="_blank">Copy mã</a></button> -->
 
                     </article>
 
