update new theme

--- a/post.html
+++ b/post.html
@@ -156,7 +156,13 @@ MASOFLASH051 giảm 40%, tối đa 150K đơn từ 350K</code> <br>
     <p>
 FMCG200K giảm 200k đơn từ 500k</p> -->
 
-
+<div class="col-btn-getcode pcd_col-md-3 text-center">
+    <p class="pcd_btn-code" onclick="getcode('0705RUSH0H','https://shopeesale.net/vns_coupon/0h-toan-shopee-hoan-50-xu-don-toi-thieu-%e2%82%ab0-toi-da-50k-xu/')">
+    <span class="partial-code">0705RUSH0H</span>
+    <span class="pcd_btn-hover">Lấy Mã</span>
+    
+    </p>
+    </div>    
 
                                 <h3>🌟MÃ CHO MỌI ĐƠN SHOPEE🌟</h3>
                                 <li>0705RUSH0H hoàn 50%, tối đa 50k</li>
