update new theme

--- a/tinkhuyenmai.html
+++ b/tinkhuyenmai.html
@@ -1353,7 +1353,7 @@
                             <h2>Shopee Sale Tháng 5<a target="_blank" href="https://shorten.asia/GAXwMNeq"><img
                                         class="aligncenter wp-image-2262 size-full"
                                         title="Shopee Siêu Sale Tháng 5 - Trăm Tỷ Ưu Đãi"
-                                        src="img/banner2.png"
+                                        src="img/banner.png"
                                         alt="Shopee Siêu Sale Tháng 5" width="1200" height="679"
                                        ></a></h2>
                             <p style="text-align: justify;">&nbsp; &nbsp; Từ 05/05 đến 20/05 Shopee sẽ bắt đầu chương
